# jogo-de-xadrez

./: .cproject  .gitignore  CMakeLists.txt  README.md
src/: Bispo.cpp  Bispo.hpp  Cavalo.cpp  Cavalo.hpp  Dama.cpp  Dama.hpp  IO_Jogo.cpp  IO_Jogo.hpp  Peao.cpp  Peao.hpp  Peca.cpp  Peca.hpp  Rei.cpp  Rei.hpp  Tabuleiro.cpp  Tabuleiro.hpp  Torre.cpp  Torre.hpp  compiling_error.txt  main.cpp
